# HBTCoulombCorrection

./: C2_Psi_A1A2.ipynb  CompareMyKAndNMK.ipynb  Gauss-Kronrod quadrature.ipynb  Hypgeom.ipynb  K2.ipynb  K3.ipynb  KGInt.cpp  KGInt.i  Levy_new.h5  MCMC-Integration.ipynb  MCMC-Levy-CUDA.ipynb  MCMC-Levy.ipynb  MCMC-Levy3D-CUDA-asymptotics.ipynb  Make-HypGeomTable.ipynb  Make-Levy-Table.ipynb  Monte Carlo Metropolis-Hastings Sampling.ipynb  README.md  Update-LevyTable-fixed_dr.ipynb  build_KGInt_Module.cmd  integrate.cpp  kernel_KGInt.cu  kernel_Levy1D.cu  kernel_Levy3D.cu
KGInt/: .gitignore  Coulomb2.hpp  Coulomb3.hpp  KGInt.cpp  KGInt.cu  KGInt.hpp  KGInt.i  KGInt.py  KGInt_class.hpp  __init__.py  build_KGInt_Module.cmd  build_KGInt_Module.sh  functions.hpp  test.cpp
Read_NM_CoulombIntegral/: CMakeLists.txt  Reader.cpp  Reader.hpp  Reader.i
